--- a/css/custom.css
+++ b/css/custom.css
@@ -2,4 +2,12 @@
 	width:100%;
 	height:1200px;
   }
+  
+ div#slideOutDiv {
+position:fixed;
+top:0px;
+left: -500px;
+height=50px;
+width=300px;
+}
  
