integrate with views

--- a/application/views/css/friends.css
+++ b/application/views/css/friends.css
@@ -3,6 +3,6 @@ form.ui-listview-filter{
 }
 
 .ui-icon-arrow-r {
-	background-image: url("images/meinv.png")
+	background-image: url("../application/views/images/meinv.png")
 }
 
