--- a/application/views/css/custom.css
+++ b/application/views/css/custom.css
@@ -1,13 +1,12 @@
- div#map_container{
-	width:100%;
-	height:1200px;
-  }
-  
- div#slideOutDiv {
-position:fixed;
-top:0px;
-left: -500px;
-height=50px;
-width=300px;
+div#map_container {
+	width: 100%;
+	height: 1200px;
 }
- 
+
+div#slideOutDiv {
+	position: fixed;
+	top: 0px;
+	left: -500px;
+	height: 50px;
+	width: 300px;
+}
